--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   logger: ^2.0.2
   permission_handler: ^12.0.0+1
   csv: ^6.0.0
-  flutter_blue_plus:
-    path: flutter_blue_plus_fixed
+  flutter_blue_plus: ^1.35.4
+  #flutter_blue_plus:
+  #  path: flutter_blue_plus_fixed
 
 
   # The following adds the Cupertino Icons font to your application.
