--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   csv: ^6.0.0
   flutter_blue_plus: ^1.35.4
+  http: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
